# BigCSV

./: .gitignore  CMakeLists.txt  Conditions.cpp  Conditions.hpp  DOCUMENTATION.md  README.md  RowComparator.cpp  RowComparator.hpp  RowUpdate.hpp  TableRow.hpp  Testing.md  csvFile.cpp  csvFile.hpp  csvTable.cpp  csvTable.hpp  file.cpp  file.hpp  helper.cpp  helper.hpp  main.cpp  shell.cpp  shell.hpp  tmpFile.cpp  tmpFile.hpp  tmpFileFactory.cpp  tmpFileFactory.hpp
inputs/: Out.csv  input.in  join_tables_script.in  large_script.in  max_filesize_comparison_script.in  multiple_tables_script.in  newFile.csv  script.in  small_script.in  update_script.in
src/: Conditions.cpp  Conditions.hpp  RowComparator.cpp  RowComparator.hpp  RowUpdate.cpp  RowUpdate.hpp  TableRow.cpp  TableRow.hpp  csvFile.cpp  csvFile.hpp  csvTable.cpp  csvTable.hpp  file.cpp  file.hpp  helper.cpp  helper.hpp  main.cpp  shell.cpp  shell.hpp  tmpFileFactory.cpp  tmpFileFactory.hpp
